--- a/StudentApp/Web.config
+++ b/StudentApp/Web.config
@@ -15,10 +15,13 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="StudentContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\StudentDB.mdf';Integrated Security=True"
- providerName="System.Data.SqlClient"/>
+    <add name="StudentContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\StudentDB.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+
+    <authentication mode="Forms">
+      <forms name ="auth" timeout="2880" loginUrl="~/Account/Login"/>
+    </authentication>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
